--- a/src/templates/_jobs/index.twig
+++ b/src/templates/_jobs/index.twig
@@ -1,47 +1,142 @@
 {% extends "_layouts/cp" %}
 
 {% block content %}
-  <div class="tw-bg-grey-lighter tw-min-h-screen">
-    <div class="tw-p-8">
-      <div class="tw-bg-white tw-rounded tw-shadow tw-overflow-hidden">
-        <div class="tw-flex tw-items-center tw-justify-between tw-p-6 tw--mx-4">
-          <div class="tw-px-4 tw-text-lg tw-text-black">{{ title }}</div>
-          <div class="tw-px-4 tw-text-black">Status filter</div>
+  <div class="qm-wrapper">
+    <div class="qm-inner">
+      <div class="qm-container">
+        <div class="qm-header">
+          <div class="tw-text-lg tw-text-black">{{ title }}</div>
+
+          {% if jobs %}
+            <div>
+              <div class="tw-flex tw--mx-2">
+                <div class="tw-px-2">
+                  <form method="post" action="" accept-charset="UTF-8">
+                    {{ csrfInput() }}
+                    <input type="hidden" name="action" value="queue-manager/queue/retry-all">
+
+                    <button class="qm-button" type="submit">Retry all</button>
+                  </form>
+                </div>
+
+                <div class="tw-px-2">
+                  <form method="post" action="" accept-charset="UTF-8">
+                    {{ csrfInput() }}
+                    <input type="hidden" name="action" value="queue-manager/queue/release-all">
+
+                    <button class="qm-button" type="submit">Cancel all</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          {% endif %}
         </div>
 
-        <table class="qm-table">
-          <thead>
-            <tr>
-              <th>Job</th>
-              <th class="tw-w-px">Status</th>
-              <th class="tw-w-px">Happened</th>
-              <th class="tw-w-px"></th>
-            </tr>
-          </thead>
-
-          <tbody>
-            {% for job in jobs %}
+        {% if jobs %}
+          <table class="qm-table">
+            <thead>
               <tr>
-                <td>
-                  {{ job.description }}
-                </td>
-                <td>
-                  {% if job.fail %}
-                    <div class="qm-status qm-red">failed</div>
-                  {% endif %}
-                </td>
-                <td>
-                  {{ job.timePushed|timestamp('short') }}
-                </td>
-                <td>
-                  <button class="qm-action">
-                    {% include "queue-manager/_icons/solid/eye.svg" ignore missing %}
-                  </button>
-                </td>
+                <th>Job</th>
+                <th>Status</th>
+                <th>Happened</th>
+                <th></th>
               </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+            </thead>
+
+            <tbody>
+              {% for job in jobs %}
+                <tr>
+                  <td>
+                    {{ job.description }}
+                  </td>
+                  <td class="tw-w-px">
+                    {% if job.fail %}
+                      <div class="qm-status qm-red">failed</div>
+                    {% elseif job.timeUpdated is null %}
+                      <div class="qm-status qm-orange">pending</div>
+                    {% else %}
+                      <div class="qm-status">reserved</div>
+                    {% endif %}
+                  </td>
+                  <td class="tw-w-px tw-whitespace-no-wrap">
+                    {{ job.timePushed|datetime('short') }}
+                  </td>
+                  <td class="tw-w-px">
+                    <div class="qm-actions">
+                      <div>
+                        <button class="qm-action qm-view-data" data-job-id="{{ job.id }}" title="View">
+                          {% include "queue-manager/_icons/solid/eye.svg" ignore missing %}
+                        </button>
+                      </div>
+                      <div>
+                        <form method="post" action="" accept-charset="UTF-8">
+                          {{ csrfInput() }}
+                          <input type="hidden" name="action" value="queue-manager/queue/retry">
+
+                          <button class="qm-action" type="submit" name="id" value="{{ job.id }}" title="Try again">
+                            {% include "queue-manager/_icons/solid/redo-alt.svg" ignore missing %}
+                          </button>
+                        </form>
+                      </div>
+                      <div>
+                        <form method="post" action="" accept-charset="UTF-8">
+                          {{ csrfInput() }}
+                          <input type="hidden" name="action" value="queue-manager/queue/release">
+
+                          <button class="qm-action" type="submit" name="id" value="{{ job.id }}" title="Cancel">
+                            {% include "queue-manager/_icons/solid/times-circle.svg" ignore missing %}
+                          </button>
+                        </form>
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+
+                {% if job.data or job.error %}
+                  <tr class="qm-table-data" data-job-id="{{ job.id }}">
+                    <td colspan="4">
+                      <div class="tw-flex tw-flex-wrap tw-rounded tw-overflow-hidden">
+                        {% if job.data %}
+                          <div class="tw-flex-1 qm-table-overview">
+                            <div class="tw-flex tw-flex-wrap tw-flex-col lg:tw-flex-row tw--mx-2 tw-leading-loose">
+                              <div class="tw-px-2 tw-w-1/3 tw-font-bold">ID</div>
+                              <div class="tw-px-2 tw-w-2/3">{{ job.id ?? 'null' }}</div>
+
+                              <div class="tw-px-2 tw-w-1/3 tw-font-bold">TTR</div>
+                              <div class="tw-px-2 tw-w-2/3">{{ job.ttr ?? 'null' }}</div>
+
+                              <div class="tw-px-2 tw-w-1/3 tw-font-bold">Priority</div>
+                              <div class="tw-px-2 tw-w-2/3">{{ job.priority ?? 'null' }}</div>
+
+                              <div class="tw-px-2 tw-w-1/3 tw-font-bold">Time pushed</div>
+                              <div class="tw-px-2 tw-w-2/3">{{ job.timePushed ? job.timePushed|datetime('short') : 'null' }}</div>
+
+                              <div class="tw-px-2 tw-w-1/3 tw-font-bold">Time updated</div>
+                              <div class="tw-px-2 tw-w-2/3">{{ job.timeUpdated ? job.timeUpdated|datetime('short') : 'null' }}</div>
+
+                              <div class="tw-px-2 tw-w-1/3 tw-font-bold">Time failed</div>
+                              <div class="tw-px-2 tw-w-2/3">{{ job.dateFailed ? job.dateFailed|datetime('short') : 'null' }}</div>
+                            </div>
+                          </div>
+                        {% endif %}
+
+                        {% if job.error %}
+                          <div class="tw-flex-1 qm-table-error">{{ job.error }}</div>
+                        {% endif %}
+
+                        <div class="tw-w-full qm-table-payload">{{ job.data|json_encode(constant('JSON_PRETTY_PRINT')) }}</div>
+                      </div>
+                    </td>
+                  </tr>
+                {% endif %}
+              {% endfor %}
+            </tbody>
+          </table>
+        {% else %}
+          <div class="qm-body">
+            <div class="qm-message">There are no jobs in the queue.</div>
+          </div>
+        {% endif %}
       </div>
     </div>
   </div>
