--- a/src/templates/_jobs/index.twig
+++ b/src/templates/_jobs/index.twig
@@ -98,7 +98,7 @@
                       <div class="tw-flex tw-flex-wrap tw-rounded tw-overflow-hidden">
                         {% if job.data %}
                           <div class="tw-flex-1 qm-table-overview">
-                            <div class="tw-flex tw-flex-wrap tw-flex-col lg:tw-flex-row tw--mx-2 tw-leading-loose">
+                            <div class="tw-flex tw-flex-wrap tw--mx-2 tw-leading-loose">
                               <div class="tw-px-2 tw-w-1/3 tw-font-bold">ID</div>
                               <div class="tw-px-2 tw-w-2/3">{{ job.id ?? 'null' }}</div>
 
