--- a/src/templates/_jobs/index.twig
+++ b/src/templates/_jobs/index.twig
@@ -117,6 +117,9 @@
                               <div class="tw-px-2 tw-w-1/3 tw-font-bold">Priority</div>
                               <div class="tw-px-2 tw-w-2/3">{{ job.priority ?? 'null' }}</div>
 
+                              <div class="tw-px-2 tw-w-1/3 tw-font-bold">Progress</div>
+                              <div class="tw-px-2 tw-w-2/3">{{ job.progress ?? 'null' }}</div>
+
                               <div class="tw-px-2 tw-w-1/3 tw-font-bold">Time pushed</div>
                               <div class="tw-px-2 tw-w-2/3">{{ job.timePushed ? job.timePushed|datetime('short') : 'null' }}</div>
 
